--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,36 @@
 [project]
 name = "pycasso"
-version = "0.1.1"
-description = "Add your description here"
+version = "0.1.2"
+authors = [
+  { name="Robert Fennis", email="fennisrobert@gmail.com" },
+]
+description = "A Matplotlib wrapper with more convenience and pretty plots with a style common in physics papers."
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "loguru>=0.7.3",
     "matplotlib>=3.10.1",
     "numpy>=2.2.3",
+    "twine>=6.1.0",
 ]
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "Operating System :: OS Independent",
+    "License :: OSI Approved :: MIT License",
+]
+
+[project.urls]
+Homepage = "https://github.com/FennisRobert/pycasso"
+Issues = "https://github.com/FennisRobert/pycasso/issues"
+
+
+[[tool.uv.index]]
+name = "pypi"
+url = "https://pypi.org/simple/"
+publish-url = "https://upload.pypi.org/legacy/"
+
+
+[[tool.uv.index]]
+name = "testpypi"
+url = "https://test.pypi.org/simple/"
+publish-url = "https://test.pypi.org/legacy/"
