--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,13 @@
 [project]
 name = "pycasso"
-version = "0.1.2"
+version = "0.1.3"
 authors = [
   { name="Robert Fennis", email="fennisrobert@gmail.com" },
 ]
 description = "A Matplotlib wrapper with more convenience and pretty plots with a style common in physics papers."
 readme = "README.md"
 requires-python = ">=3.13"
+license = {text = "MIT"}
 dependencies = [
     "loguru>=0.7.3",
     "matplotlib>=3.10.1",
@@ -18,6 +19,10 @@ classifiers = [
     "Operating System :: OS Independent",
     "License :: OSI Approved :: MIT License",
 ]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [project.urls]
 Homepage = "https://github.com/FennisRobert/pycasso"
