--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "pyescher"
-version = "0.1.1"
+version = "0.2.0"
 authors = [
   { name="Robert Fennis", email="fennisrobert@gmail.com" },
 ]
@@ -10,8 +10,9 @@ requires-python = ">=3.10"
 license = {text = "MIT"}
 dependencies = [
     "loguru>=0.7.3",
-    "matplotlib>=3.10.1",
-    "numpy>=2.2.3",
+    "matplotlib<=3.9",
+    "numpy<2.2",
+    "pip-tools>=7.4.1",
     "twine>=6.1.0",
 ]
 classifiers = [
