--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "pyescher"
-version = "0.2.0"
+version = "0.2.1"
 authors = [
   { name="Robert Fennis", email="fennisrobert@gmail.com" },
 ]
@@ -11,7 +11,7 @@ license = {text = "MIT"}
 dependencies = [
     "loguru>=0.7.3",
     "matplotlib<=3.9",
-    "numpy<2.2",
+    "numpy>=2.2",
     "pip-tools>=7.4.1",
     "twine>=6.1.0",
 ]
@@ -40,3 +40,8 @@ publish-url = "https://upload.pypi.org/legacy/"
 name = "testpypi"
 url = "https://test.pypi.org/simple/"
 publish-url = "https://test.pypi.org/legacy/"
+
+[dependency-groups]
+dev = [
+    "scipy>=1.15.2",
+]
